--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
   },
   "homepage": "https://github.com/StoryForMe/StoryForMe_Server#readme",
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.0",
-    "express": "^4.17.3",
-    "morgan": "^1.10.0",
-    "mysql": "^2.18.1",
-    "router": "^1.3.6",
-    "routes": "^2.1.0"
+    "cors": "2.8.5",
+    "dotenv": "16.0.0",
+    "express": "4.17.3",
+    "morgan": "1.10.0",
+    "mysql": "2.18.1",
+    "node-schedule": "2.1.0",
+    "request": "2.88.2",
+    "router": "1.3.6",
+    "routes": "2.1.0"
   }
 }
