--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cors": "2.8.5",
     "dotenv": "16.0.0",
     "express": "4.17.3",
+    "http-status-codes": "2.2.0",
     "morgan": "1.10.0",
     "mysql": "2.18.1",
     "node-schedule": "2.1.0",
